# gcc-cmake-docker

./: .gitlab-ci.yml  README.md  make_shell.sh  run_test.sh
gcc-cmake/: Dockerfile
test/: CMakeLists.txt  run_test.sh
